# rooftex

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/rooftex/: __init__.py  config.py  results.py
src/rooftex/core/: __init__.py  adoption.py  potential.py  profiles.py
src/rooftex/economics/: __init__.py  learning_curve.py
tests/: test_adoption.py  test_potential.py  test_profiles.py
